crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__max_doc_length.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W505.py:2:51: W505 (doc-line-too-long) Doc line too long (57 > 50)
  |
1 | #!/usr/bin/env python3
2 | """Here's a top-level docstring that's over the limit."""
  |                                                   ^^^^^^^ W505 (doc-line-too-long)
  |

W505.py:6:51: W505 (doc-line-too-long) Doc line too long (56 > 50)
  |
5 | def f1():
6 |     """Here's a docstring that's also over the limit."""
  |                                                   ^^^^^^ W505 (doc-line-too-long)
7 |
8 |     x = 1  # Here's a comment that's over the limit, but it's not standalone.
  |

W505.py:10:51: W505 (doc-line-too-long) Doc line too long (56 > 50)
   |
 8 |     x = 1  # Here's a comment that's over the limit, but it's not standalone.
 9 |
10 |     # Here's a standalone comment that's over the limit.
   |                                                   ^^^^^^ W505 (doc-line-too-long)
11 |
12 |     x = 2
   |

W505.py:13:51: W505 (doc-line-too-long) Doc line too long (94 > 50)
   |
12 |     x = 2
13 |     # Another standalone that is preceded by a newline and indent token and is over the limit.
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ W505 (doc-line-too-long)
14 |
15 |     print("Here's a string that's over the limit, but it's not a docstring.")
   |

W505.py:18:51: W505 (doc-line-too-long) Doc line too long (61 > 50)
   |
18 | "This is also considered a docstring, and is over the limit."
   |                                                   ^^^^^^^^^^^ W505 (doc-line-too-long)
   |

W505.py:24:51: W505 (doc-line-too-long) Doc line too long (82 > 50)
   |
22 |     """Here's a multi-line docstring.
23 |
24 |     It's over the limit on this line, which isn't the first line in the docstring.
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ W505 (doc-line-too-long)
25 |     """
   |

W505.py:31:51: W505 (doc-line-too-long) Doc line too long (85 > 50)
   |
29 |     """Here's a multi-line docstring.
30 |
31 |     It's over the limit on this line, which isn't the first line in the docstring."""
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ W505 (doc-line-too-long)
   |
