crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__tab_size_1.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501_2.py:2:7: E501 (line-too-long) Line too long (7 > 6)
  |
1 | # aaaa
2 | # aaaaa
  |       ^ E501 (line-too-long)
3 |     # a
4 |     # a
  |

E501_2.py:3:7: E501 (line-too-long) Line too long (7 > 6)
  |
1 | # aaaa
2 | # aaaaa
3 |     # a
  |       ^ E501 (line-too-long)
4 |     # a
5 |     # aa
  |

E501_2.py:7:7: E501 (line-too-long) Line too long (7 > 6)
  |
5 |     # aa
6 |     # aaa
7 |     # aaaa
  |          ^ E501 (line-too-long)
8 |         # a
9 |         # aa
  |

E501_2.py:10:7: E501 (line-too-long) Line too long (7 > 6)
   |
 8 |         # a
 9 |         # aa
10 |         # aaa
   |             ^ E501 (line-too-long)
11 |
12 | if True: # noqa: E501
   |

E501_2.py:16:7: E501 (line-too-long) Line too long (7 > 6)
   |
14 |     [12 ]
15 |     [1,2]
16 |     [1, 2]
   |          ^ E501 (line-too-long)
   |
