crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__too_many_blank_lines_isort_compatibility-lines-after(0)-between(0).snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30_isort.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import json
2 | |
3 | |
4 | |
5 | | from typing import Any, Sequence
  | |________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1 1 | import json
2   |-
3   |-
4   |-
5 2 | from typing import Any, Sequence
6   |-
7   |-
8 3 | class MissingCommand(TypeError): ...  # noqa: N818
9 4 | 
10 5 | 

E30_isort.py:5:1: E303 (too-many-blank-lines) [*] Too many blank lines (3)
  |
5 | from typing import Any, Sequence
  | ^^^^ E303 (too-many-blank-lines)
  |
  = help: Remove extraneous blank line(s)

ℹ Safe fix
1 1 | import json
2 2 | 
3 3 | 
4   |-
5 4 | from typing import Any, Sequence
6 5 | 
7 6 | 

E30_isort.py:8:1: E303 (too-many-blank-lines) [*] Too many blank lines (2)
  |
8 | class MissingCommand(TypeError): ...  # noqa: N818
  | ^^^^^ E303 (too-many-blank-lines)
  |
  = help: Remove extraneous blank line(s)

ℹ Safe fix
3 3 | 
4 4 | 
5 5 | from typing import Any, Sequence
6   |-
7   |-
8 6 | class MissingCommand(TypeError): ...  # noqa: N818
9 7 | 
10 8 | 

E30_isort.py:21:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
   |
21 |     abcd.foo()
   |     ^^^^ E303 (too-many-blank-lines)
22 |
23 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
   |
   = help: Remove extraneous blank line(s)

ℹ Safe fix
17 17 | if __name__ == "__main__":
18 18 |     import abcd
19 19 | 
20    |-
21 20 |     abcd.foo()
22 21 | 
23 22 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...

E30_isort.py:26:5: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
25 |   if TYPE_CHECKING:
26 | /     import os
27 | |
28 | |
29 | |
30 | |     from typing_extensions import TypeAlias
   | |___________________________________________^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
25 25 | if TYPE_CHECKING:
26 26 |     import os
27 27 | 
28    |-
29    |-
30 28 |     from typing_extensions import TypeAlias
31 29 | 
32 30 | 

E30_isort.py:30:5: E303 (too-many-blank-lines) [*] Too many blank lines (3)
   |
30 |     from typing_extensions import TypeAlias
   |     ^^^^ E303 (too-many-blank-lines)
   |
   = help: Remove extraneous blank line(s)

ℹ Safe fix
25 25 | if TYPE_CHECKING:
26 26 |     import os
27 27 | 
28    |-
29    |-
30 28 |     from typing_extensions import TypeAlias
31 29 | 
32 30 | 

E30_isort.py:33:5: E303 (too-many-blank-lines) [*] Too many blank lines (2)
   |
33 |     abcd.foo()
   |     ^^^^ E303 (too-many-blank-lines)
34 |
35 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
   |
   = help: Remove extraneous blank line(s)

ℹ Safe fix
29 29 | 
30 30 |     from typing_extensions import TypeAlias
31 31 | 
32    |-
33 32 |     abcd.foo()
34 33 | 
35 34 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:

E30_isort.py:60:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
60 | from typing import Any, Sequence
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ I001 (unsorted-imports)
61 |
62 | class MissingCommand(TypeError): ...  # noqa: N818
   |
   = help: Organize imports

ℹ Safe fix
58 58 | 
59 59 | 
60 60 | from typing import Any, Sequence
61    |-
62 61 | class MissingCommand(TypeError): ...  # noqa: N818

E30_isort.py:62:1: E303 (too-many-blank-lines) [*] Too many blank lines (1)
   |
60 | from typing import Any, Sequence
61 |
62 | class MissingCommand(TypeError): ...  # noqa: N818
   | ^^^^^ E303 (too-many-blank-lines)
   |
   = help: Remove extraneous blank line(s)

ℹ Safe fix
58 58 | 
59 59 | 
60 60 | from typing import Any, Sequence
61    |-
62 61 | class MissingCommand(TypeError): ...  # noqa: N818
